<resources>
    <string name="app_name">Merchant</string>
    <string name="loading">Loading...</string>
    <string name="label_title">QR Payment Merchant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">USERNAME:</string>
    <string name="Gen">GEN QR</string>
    <string name="Scad">SCAN QR</string>
    <string name="label_history">History</string>
    <string name="date">Last login: Aug 01,2018</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confrimnewpassword">Confrim New Password</string>
    <string name="payment">PAYMENT</string>
    <string name="ok">OK</string>
    <string name="smcc">SMCC</string>
    <string name="jcb_premo">JCB PREMO</string>
    <string name="mizuho">MIZUHO</string>
    <string name="selectcard">Select Card Type</string>
    <string name="password">PASSWORD:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="marchant_name">Marchant Name</string>
    <string name="top_up">TOP UP</string>
    <string name="Payment">Payment Amount</string>
    <string name="paymenti">Payment</string>
    <string name="topup_amount">Topup Amount</string>
    <string name="password_complete">Change Password Complete !</string>
    <string name="qr_code_scand_successfully">QR code has been Successfully Scanned,</string>
    <string name="please_wait">Please wait,While we processing</string>
    <string name="cancel">cancel</string>
    <string name="password_changing">Password changing is succesful.</string>
    <string name="returning_back_to_main">returning back to Main Screen.</string>
    <string name="logout">Are you sure to Logout?,</string>
    <string name="login_screen">You will returning to Login Screen</string>
    <string name="chang_password">Chang Password</string>
    <string name="cout_down">Cout Down</string>
    <string name="qr_code">QR CODE</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="form_date">Form Date</string>
    <string name="to_date">To Date</string>
    <string name="card_type">Card Type</string>
    <string name="transaction_id">Transaction ID</string>

    <!-- Array Card Type -->
    <string-array name="CardType">
        <item>JCB PREMO</item>
        <item>SMCC</item>
        <item>MIZUHO</item>
    </string-array>

</resources>
