<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_success"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_true"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/password_complete"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_Message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/password_changing"/>
    <TextView
        android:id="@+id/tv_Message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/returning_back_to_main"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ok"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/shap_round_rect_button"/>

    <com.promptnow.qrpayment.merchant.View.SpinView
        android:layout_marginTop="16dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"/>

</LinearLayout>