<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Logout Comfirmation"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialogMessage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialogMessage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shap_round_rect_button"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shap_round_rect_button"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <com.promptnow.qrpayment.merchant.View.SpinView
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:visibility="gone" />


</LinearLayout>