<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.promptnow.qrpayment.merchant.Fragment.ScandFragment">

    <TextView
        android:id="@+id/label_QR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toobar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/qr_code"
        android:textColor="@color/colorAccent"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/label_QR"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/shap_round_react_qr" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_count"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/cout_down"
        android:textColor="@color/colorAccent"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_cancel"
        android:layout_centerInParent="true"
        android:text="(  )"
        android:textColor="@color/colorAccent"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shap_round_rect_button"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>
