<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.promptnow.qrpayment.merchant.Fragment.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/icApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_app" />

    <TextView
        android:id="@+id/tv_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icApp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/label_title"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/edit_User_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_title"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="right"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:id="@+id/lindUser"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_User_Layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/edit_Pass_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lindUser"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="right"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:id="@+id/linePass"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_Pass_Layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/linePass"
        android:layout_marginRight="27dp"
        android:layout_marginTop="3dp"
        android:padding="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/greyLight"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/shap_round_rect_button_add"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
