<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.promptnow.qrpayment.merchant.Fragment.PaymentFragment">

    <LinearLayout
        android:id="@+id/edit_User_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_top"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Payment"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="right"
            android:maxLength="15"
            android:password="true"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="24sp" />

    </LinearLayout>
    <View
        android:id="@+id/lindUser"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_User_Layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_cancel"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_round_rect_button"
        android:text="@string/ok" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_round_rect_button"
        android:text="@string/cancel"/>
</RelativeLayout>
