<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/edit_User_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toobar"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">
        <TextView
            android:id="@+id/tv_current_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentpassword"
            android:textColor="@color/white"
            android:textSize="16sp" />
       <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="right"
            android:freezesText="true"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="24sp" />

    </LinearLayout>
    <View
        android:id="@+id/lindUser"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_User_Layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/edit_Pass_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lindUser"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">
        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newpassword"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="right"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="24sp" />

    </LinearLayout>
    <View
        android:id="@+id/linePass"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_Pass_Layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/white" />
    <LinearLayout
        android:id="@+id/confrim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linePass"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">
      <TextView
            android:id="@+id/tv_confrimpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confrimnewpassword"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/edt_confrimpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="right"
            android:maxLength="15"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="24sp" />
    </LinearLayout>
    <View
        android:id="@+id/line_confrime"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/confrim"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/white" />
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/shap_round_rect_button_add"
        android:text="OK"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/btn_ok"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shap_round_rect_button_add"
        android:text="@string/cancel"
        android:textColor="@color/white" />
</RelativeLayout>
