<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.promptnow.qrpayment.merchant.Fragment.HistoryFragment">

    <RelativeLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="32dp">

        <LinearLayout
            android:id="@+id/from_Date_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label_title"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_form_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_date"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ff"
                android:background="@color/transparent"
                android:gravity="right"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:id="@+id/lineDate"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/from_Date_Layout"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/to_Date_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineDate"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_To_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ff"
                android:background="@color/transparent"
                android:gravity="right"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:id="@+id/lineToDate"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/to_Date_Layout"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:id="@+id/card_Type_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineToDate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_type"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp_Card_Type"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:entries="@array/CardType"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:id="@+id/lineCardType"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/card_Type_Layout"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/transaction_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineCardType"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_id"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_Transaction_Id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="right"
                android:inputType="number"
                android:theme="@style/LoginTheme"
                android:singleLine="true"
                android:textSize="24sp" />
        </LinearLayout>
        <View
            android:id="@+id/lineTransaction"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/transaction_Layout"
            android:background="@color/white" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/liner1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </android.support.v4.view.ViewPager>
        <LinearLayout
            android:id="@+id/liner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


        </LinearLayout>
    </RelativeLayout>






</LinearLayout>

