<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_Setting"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:background="@drawable/shape_round_rect_button"
                android:src="@drawable/ic_settings_white_24dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_title"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_history"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_round_rect_button"
                android:text="@string/label_history"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <TextView
        android:id="@+id/datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toobar"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="date"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/datetime"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/edit_User_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marchant_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="right"
            android:maxLength="15"
            android:textSize="24sp" />
    </LinearLayout>

    <View
        android:id="@+id/lindUser"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_User_Layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <com.promptnow.qrpayment.merchant.View.CustomButtomGenQr
                android:id="@+id/custom_btn_genQR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <com.promptnow.qrpayment.merchant.View.CustomScand
                android:id="@+id/custom_btn_scadQR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <com.promptnow.qrpayment.merchant.View.CustomButtomTopup
            android:id="@+id/custom_btn_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>
